--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile "org.jetbrains.anko:anko-support-v4:$anko_version"
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.diogobernardino:williamchart:2.2'
 }
 
 buildscript {
